# ptools

./: .Session.vim  .gitignore  full_requirements.txt  pyproject.toml
.github/workflows/: docs.yml
docs/: Makefile  README.md  build.sh  cli.rst  conf.py  conf_minimal.py  getting-started.rst  index.rst  quickstart.rst  requirements.txt  serve.sh
docs/_build/html/: .buildinfo  README.html  changelog.html  contributing.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/api/: index.rst
docs/api-reference/: index.rst  lib-modules.rst  models.rst
docs/architecture/: index.rst
docs/cli-reference/: index.rst  llm.rst  main.rst
docs/tutorials/: index.rst
docs/user-guide/: ai-integration.rst  core-concepts.rst  index.rst
profiles/: default.json  unix.json
scripts/: generate_requirements.py
src/ptools/: __init__.py  clip.py  dev.py  flow.py  fs.py  json.py  kill.py  literals.py  llm.py  main.py  projects.py  rsync.py  secrets.py  settings.py  shell.py  time.py  touch.py  watch.py  workspaces.py
src/ptools/formats/: __init__.py  _factory.py  json.py  yaml.py
tests/: conftest.py  test_formats.py  test_json_cli.py  test_main_cli.py  test_time.py  test_touch.py
tests/lib/: test_flow_grammar.py  test_flow_utils.py  test_flow_values.py
tests/utils/: test_cache.py  test_cases.py  test_config.py  test_decorator_compositor.py  test_encrypt.py  test_enums.py  test_lazy.py  test_re.py  test_read.py  test_require.py  test_serial.py  test_xml_repr.py
(+146 files in other folders)
