[project]
name = "ptools"
version = "1.0.0"
description = "Omar Ibrahim Power Tools"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "watchdog>=3.0",
    "keyring>=25.6.0",
    "pycryptodome>=3.14.0",
    "pydantic>=2.10",
    "lark>=1.1",
    "humanize>=4.8.0",
    "jinja2>=3.0.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "prompt-toolkit>=3.0.0"
]

[project.scripts]
ptools  = "ptools.main:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
